--- a/coursework.html
+++ b/coursework.html
@@ -406,16 +406,18 @@
             },
 
             methods: {
-                fetchCourses(){
-                    fetch("http://localhost:3000/collections/courses")
-                    .then((response) => response.json())
-                    .then((data) => (this.courses = data))
-                    .catch((error) =>
-                        console.error("Error fetching lessons from backend:", error)
-                    );
-                },
                 setActive(navItem) {
                     this.activeNav = navItem;
+                },
+                async fetchCourses() {
+                    try {
+                        const response = await fetch('http://localhost:3000/collections/courses');
+                        if (!response.ok) throw new Error('Failed to fetch courses');
+                        this.courses = await response.json();
+                        console.log('Fetched Courses:', this.courses);
+                    } catch (error) {
+                        console.error('Error fetching courses:', error.message);
+                    }
                 },
 
                 //Method to add any item from the course page to the cart page,
@@ -467,6 +469,9 @@
                     this.deliveryMethod = 'Home';
                 },
 
+            },
+            created() {
+                this.fetchCourses(); // Fetch courses on component creation
             },
 
             computed: {                
